CSS: set text-size-adjust to fix line-numbered code being huge on iOS

--- a/themes/robjwells-2020/assets/css/styles.css
+++ b/themes/robjwells-2020/assets/css/styles.css
@@ -40,6 +40,8 @@ body {
   font-weight: 400;
   line-height: 1.55555;
   letter-spacing: 0.01rem;
+  text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 .wrapper {
